Change isSecured validator